--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "debugger.js",
+  "name": "debugger_js",
   "version": "1.0.0",
   "description": "A library for debug logging in javascript",
   "main": "debugger.js",
